--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.6",
   "private": false,
   "description": "",
-  "main": "index.js",
+  "main": "src/library-main.js",
     "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/Yoshikatsu-Koyanagi/plusminusbutton.git"
   },
-  "author": "yoshikatsu",
+  "author": "",
   "files": [ "plusminusbutton"],
   "license": "MIT",
   "bugs": {
