--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plusminusbutton",
-  "version": "1.0.6",
+  "version": "1.0.0",
   "private": false,
   "description": "",
   "main": "src/library-main.js",
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/Yoshikatsu-Koyanagi/plusminusbutton.git"
   },
   "author": "",
-  "files": [ "plusminusbutton"],
+  //"files": [ "plusminusbutton"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Yoshikatsu-Koyanagi/plusminusbutton/issues"
