--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": false,
   "description": "",
-  "main": "src/libwrary-main.js",
+  "main": "index.js",
     "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
